Drop Java 8, require Java 11+ with OpenJFX Fix asymmetric zoom distortion with independent X/Y scaling Fix scale lock being bypassed by min/max clamping Replace CSS corner background with runtime binding for theme compatibility Update CI to multi-version JDK/JFX matrix with xvfb headless testing Update all Maven plugins and test dependencies Switch sample to AtlantaFX theming